# Multimodal-AI-Modal

./: pyproject.toml  requirements.txt  test.py
src/multimodal_ai_modal/: __init__.py  cli.py  core.py  models.py
src/multimodal_ai_modal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_basic.py
training/: meld_dataset.py
