[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-ai-modal"
version = "0.1.0"
description = "A multimodal AI framework for processing text, images, and other data types"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "transformers>=4.20.0",
    "scikit-learn>=1.1.0",
    "pillow>=9.0.0",
    "opencv-python>=4.6.0",
    "fastapi>=0.78.0",
    "uvicorn>=0.18.0",
    "requests>=2.28.0",
    "python-dotenv>=0.20.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/multimodal-ai-modal"
Repository = "https://github.com/yourusername/multimodal-ai-modal"
Issues = "https://github.com/yourusername/multimodal-ai-modal/issues"

[project.scripts]
multimodal-ai = "multimodal_ai_modal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]